--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -1,4 +1,6 @@
-= Layered Standard for XCP
+= Layered Standard for XCP, v1.0
+:doctype: book
+:imagesdir: images
 :sectnums:
 :sectnumlevels: 5
 :toc: left
@@ -6,15 +8,13 @@
 :toclevels: 5
 :xrefstyle: short
 :docinfo: shared
-:docinfodir: docs
-:stylesheet: docs/fmi-spec.css
+:stylesheet: fmi-spec.css
 :stem: latexmath
 :source-highlighter: highlightjs
 :nofooter:
 :favicon: images/favicon.ico
-:revdate: unreleased
-:revnumber: 1.0
 :icons: font
+
 
 Based on FMI 3.0, this layered standard defines how to describe and implement XCP support for FMUs.
 
